@@ -3,6 +3,7 @@ Version 0.4.6
 + Added click sound
 = Updated menu
 + Added rain
++ Added I key to toggle inventory
 
 Version 0.4.4
 + Added planks (randomly generated on new map)
